fix: master not main

--- a/.github/workflows/deploy-buy.yml
+++ b/.github/workflows/deploy-buy.yml
@@ -2,7 +2,7 @@ name: Deploy Buy to Server
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master, main ]
     paths:
       - 'buy/**'
   workflow_dispatch: {}
